--- a/ProjetIA_mlflow.ipynb
+++ b/ProjetIA_mlflow.ipynb
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "044b2545",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1630,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/11/19 16:26:03 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n"
+      "2025/11/19 16:36:11 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n"
      ]
     },
     {
@@ -1644,7 +1644,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/11/19 16:26:06 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+      "2025/11/19 16:36:14 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
      ]
     },
     {
@@ -1657,7 +1657,8 @@
    ],
    "source": [
     "os.environ['MLFLOW_TRACKING_USERNAME'] = 'Stephanphanloman'\n",
-    "os.environ['MLFLOW_TRACKING_PASSWORD'] = 'd3d8941f676572a65649dde54dde48cdf59aaba1'\n",
+    "os.environ['MLFLOW_TRACKING_PASSWORD'] = 'ba530ff72c250bddf9385ead51ca25be2e114261'\n",
+    "# mlflow.set_tracking_uri(\"http://127.0.0.1:5000\")\n",
     "\n",
     "try:\n",
     "    mlflow.set_tracking_uri(\"https://dagshub.com/Stephanphanloman/ProjectIA_mlflow_dagshub.mlflow\")\n",
@@ -1691,6 +1692,8 @@
     "        })\n",
     "        mlflow.sklearn.log_model(best_xgb, 'best_xgb_model')\n",
     "        print(\"Model logged successfully to local MLflow storage\")\n",
+    "\n",
+    "\n",
     "    "
    ]
   }
